--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.5.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
