--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "gc-stats": "^1.4.0",
     "helmet": "^5.1.1",
     "mongoose": "^6.5.2",
     "passport": "^0.6.0",
