--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hcaptcha/vue-hcaptcha": "^0.3.2",
     "@mdi/js": "^7.0.96",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
@@ -22,6 +23,7 @@
     "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
     "vue": "^2.6.14",
+    "vue-meta": "^2.4.0",
     "vue-notification": "^1.3.20",
     "vue-router": "3.6.0",
     "vuetify": "^2.6.0",
