--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VUE_APP_BACKEND=http://localhost:1000
-VUE_APP_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
+VUE_APP_BACKEND=https://e2ee-bs-app.cloud
+VUE_APP_SITE_KEY=75ec369f-f564-4e97-b53a-6d54297c813f
