--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
     "vue": "^2.6.14",
+    "vue-i18n": "^9.2.2",
     "vue-meta": "^2.4.0",
     "vue-notification": "^1.3.20",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-router": "3.6.0",
     "vuetify": "^2.6.0",
     "vuex": "3.6.2"
