Bug fixes & README

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VUE_APP_BACKEND=https://lockguardapp.netlify.com
-VUE_APP_SITE_KEY=c56b2182-1b05-4a6f-bf90-286a9fef91f1
+VUE_APP_BACKEND=http://localhost:1000
+VUE_APP_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
